--- a/src/main/resources/templates/edit_book.html
+++ b/src/main/resources/templates/edit_book.html
@@ -42,7 +42,7 @@
 
             <h1 class = "text-center">Update Book</h1>
             <div class="card-body">
-                <form class="form" th:action="@{/books/__${book.id}__}" th:object="${book}" method = "post">
+                <form class="form" th:action="@{/books/__${book.id}__}" th:object="${book}" method = "post" enctype="multipart/form-data">
 
                     <div class="form-group">
                         <label>Title</label>
@@ -65,6 +65,11 @@
                                class = "form-control"
                                placeholder="Enter Book Published Year">
 
+                    </div>
+
+                    <div class="form-group">
+                        <label>Cover Image</label>
+                        <input type="file" name="file" class="form-control-file" required />
                     </div>
 
                     <div class="form-group">
