--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -64,6 +64,7 @@
         <thead class="table-dark">
         <tr>
             <th>ID</th>
+            <th>Cover Photo</th>
             <th>Title</th>
             <th>Author</th>
             <th>Publisher</th>
@@ -75,6 +76,10 @@
         <tbody>
         <tr th:each = "book: ${books}">
             <td th:text = "${book.getId()}"></td>
+            <td>
+                <img th:src="@{'/books/' + ${book.getId()} + '/image'}" alt="Book photo" width="100" height="150">
+
+            </td>
             <td th:text = "${book.getTitle()}"></td>
             <td th:text = "${book.getAuthorsNames()}" ></td>
             <td th:text = "${book.getPublisherName()}"></td>
@@ -93,6 +98,8 @@
 
 </div>
 
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
 
 <script>
     function deleteBook(id) {
