--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,7 +60,10 @@
               <button type="submit" class="btn btn-primary">Login</button>
               <span> Not registered?
                             <a th:href="@{/register}"> Register/SignUp Here</a>
-                        </span>
+              </span>
+              <div id="formFooter" class = "pt-3" >
+                <a  class="btn btn-secondary btn-sm " th:href="@{/forgot-password}">Forgot Password?</a>
+              </div>
             </div>
           </form>
         </div>
