--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -50,9 +50,7 @@
     <tr>
       <th>ID</th>
       <th>Title</th>
-      <th>Author</th>
-      <th>Publisher</th>
-      <th>ISBN</th>
+      <th>Details</th>
     </tr>
     </thead>
 
@@ -60,9 +58,11 @@
     <tr th:each = "book: ${book}">
       <td th:text = "${book.getId()}"></td>
       <td th:text = "${book.getTitle()}"></td>
-      <td th:text = "${book.getAuthorsNames()}" ></td>
-      <td th:text = "${book.getPublisherName()}"></td>
-      <td th:text = "${book.getIsbn()}"></td>
+      <td>
+        <a class="btn btn-info btn-sm" th:href="@{/books/details/{id}(id=${book.getId()})}">Details</a>
+
+      </td>
+
 
     </tr>
     </tbody>
