--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+>
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta charset="UTF-8">
@@ -24,6 +26,16 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/index}">Book Management</a>
+
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" sec:authorize="isAuthenticated()">
+        <form th:action="@{/logout}" method="post" style="display: inline;">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+          <button type="submit" class="btn btn-link nav-link" style="display:inline;cursor:pointer;">Log out</button>
+        </form>
 
       </li>
     </ul>
@@ -50,7 +62,7 @@
   <hr>
   <div class="row">
     <div class="col-md-3">
-      <img th:src="@{'/books/' + ${book.id} + '/image'}" alt="Book Cover Image" class="img-thumbnail">
+      <img th:src="@{'/books/' + ${book.getId()} + '/image'}" alt="Book Cover Image" class="img-thumbnail">
     </div>
     <div class="col-md-9">
       <h2 th:text="${book.title}"></h2>
