--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+>
 <head>
     <meta charset="UTF-8">
     <title>Books</title>
@@ -28,6 +30,18 @@
 
             </li>
         </ul>
+
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="post" style="display: inline;">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <button type="submit" class="btn btn-link nav-link" style="display:inline;cursor:pointer;">Log out</button>
+                </form>
+
+            </li>
+        </ul>
+
+
     </div>
 </nav>
 
