--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,8 +17,8 @@
 </nav>
 <br>
 <div class="container">
-  <div class="row justify-content-center">
-  <div class="row col-md-8 offset-md-2">
+  <div class="row">
+  <div class="col-md-6 offset-md-3">
     <div class="card">
       <div th:if="${param.success}">
         <div class="alert alert-info">You've successfully registered
